Adds contact page from webflow

--- a/static/about.html
+++ b/static/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Fri Nov 13 2020 10:54:44 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Mon Nov 16 2020 11:14:38 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f8432592616248537dab3da" data-wf-site="5f7f19d60c33ef0c409a8bf8">
 <head>
   <meta charset="utf-8">
@@ -67,11 +67,11 @@
             <a href="/blog" class="main-nav-link w-nav-link">Insights</a>
           </li>
           <li class="navitem contactin">
-            <a href="#" class="button cta nav in w-button">Contact</a>
+            <a href="/contact" class="button cta nav in w-button">Contact</a>
           </li>
         </ul>
       </nav>
-      <a href="#" class="button cta nav w-button">Contact</a>
+      <a href="/contact" class="button cta nav w-button">Contact</a>
       <div class="menu-button-2 w-nav-button">
         <div class="image-4 w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="33" height="17.5" viewbox="0 0 32.63 17" classname="image-4">
             <path fill="#14315d" d="M7.4,0,0,4.27v8.46L7.4,17l7.34-4.27V4.27ZM7.34,2.82l5,2.89v5.64L7.4,14.18,2.45,11.35V5.71L4.2,4.64"></path>
@@ -201,9 +201,9 @@
       <a href="/consulting" class="footerlink">Consulting</a>
       <a href="/tools" class="footerlink">Tools</a>
       <a href="/blog" class="footerlink">Insights</a>
-      <a href="#" class="footerlink">Contact</a>
+      <a href="/contact" class="footerlink">Contact</a>
     </nav>
-    <a href="https://frontside.com/" target="_blank" rel="nofollow" class="footer-symbol w-inline-block"><img src="images/fs-webclip.png" loading="lazy" width="32.5" alt="" class="image-6"></a>
+    <a href="/" class="footer-symbol w-inline-block"><img src="images/fs-webclip.png" loading="lazy" width="32.5" alt="" class="image-6"></a>
     <p class="footer-notes"><br>2301 W Anderson Ln #107<br>Austin, Texas 78757<br>+1 (800) 493-4589</p>
     <p class="copyright">© 2005-2020 THE FRONTSIDE SOFTWARE, INC. ALL RIGHTS RESERVED.</p>
   </footer>
