--- a/static/contact.html
+++ b/static/contact.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
 <!--  Last Published: Mon Nov 16 2020 11:14:38 GMT+0000 (Coordinated Universal Time)  -->
-<html data-wf-page="5f85bf7b1a80ea76947f56fd" data-wf-site="5f7f19d60c33ef0c409a8bf8">
+<html data-wf-page="5faea4534d61150d591f8411" data-wf-site="5f7f19d60c33ef0c409a8bf8">
 <head>
   <meta charset="utf-8">
-  <title>Tools and libraries</title>
-  <meta content="Frontside creates and maintains Open Source libraries that fill in gaps in the app development ecosystem." name="description">
-  <meta content="Tools and libraries" property="og:title">
-  <meta content="Frontside creates and maintains Open Source libraries that fill in gaps in the app development ecosystem." property="og:description">
-  <meta content="https://uploads-ssl.webflow.com/5f7f19d60c33ef0c409a8bf8/5fae657d672304285060a4d9_tools.png" property="og:image">
-  <meta content="Tools and libraries" property="twitter:title">
-  <meta content="Frontside creates and maintains Open Source libraries that fill in gaps in the app development ecosystem." property="twitter:description">
-  <meta content="https://uploads-ssl.webflow.com/5f7f19d60c33ef0c409a8bf8/5fae657d672304285060a4d9_tools.png" property="twitter:image">
+  <title>Contact</title>
+  <meta content="Get in touch with one of our engineers." name="description">
+  <meta content="Contact" property="og:title">
+  <meta content="Get in touch with one of our engineers." property="og:description">
+  <meta content="Contact" property="twitter:title">
+  <meta content="Get in touch with one of our engineers." property="twitter:description">
   <meta property="og:type" content="website">
   <meta content="summary_large_image" name="twitter:card">
   <meta content="width=device-width, initial-scale=1" name="viewport">
@@ -61,17 +59,17 @@
             <a href="/consulting" class="main-nav-link w-nav-link">Consulting</a>
           </li>
           <li class="navitem">
-            <a href="/tools" aria-current="page" class="main-nav-link w-nav-link w--current">Tools</a>
+            <a href="/tools" class="main-nav-link w-nav-link">Tools</a>
           </li>
           <li class="navitem">
             <a href="/blog" class="main-nav-link w-nav-link">Insights</a>
           </li>
           <li class="navitem contactin">
-            <a href="/contact" class="button cta nav in w-button">Contact</a>
+            <a href="/contact" aria-current="page" class="button cta nav in w-button w--current">Contact</a>
           </li>
         </ul>
       </nav>
-      <a href="/contact" class="button cta nav w-button">Contact</a>
+      <a href="/contact" aria-current="page" class="button cta nav w-button w--current">Contact</a>
       <div class="menu-button-2 w-nav-button">
         <div class="image-4 w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="33" height="17.5" viewbox="0 0 32.63 17" classname="image-4">
             <path fill="#14315d" d="M7.4,0,0,4.27v8.46L7.4,17l7.34-4.27V4.27ZM7.34,2.82l5,2.89v5.64L7.4,14.18,2.45,11.35V5.71L4.2,4.64"></path>
@@ -80,59 +78,36 @@
       </div>
     </div>
   </div>
-  <section class="widewrapper herowrapper w-container">
-    <div class="herotext">
-      <h1 class="heading"><span class="text-span-27">Open source</span> Tools to make the complex <span class="text-span-26">simple</span></h1>
-      <p class="subheader">We create and maintain Open Source libraries that fill in gaps in the app development ecosystem.</p>
-    </div>
-    <div class="toolsheroimage"><img src="images/tools-hero1.5x.png" loading="lazy" srcset="images/tools-hero1.5x-p-500.png 500w, images/tools-hero1.5x.png 835w" sizes="(max-width: 479px) 92vw, (max-width: 767px) 95vw, (max-width: 991px) 600px, 44vw" alt=""></div>
-  </section>
-  <section class="bottomwrapper nobottomspace w-container">
-    <div class="dialoguequote sidequote">
-      <blockquote class="sidequote white">“BigTest is the testing framework I’ve always wanted to have. It takes all we’ve learned about testing and wraps it up in a coherent and powerful package.”</blockquote>
-      <p class="sidequoteauthor white">—Jonas Nicklas, Creator of Capybara, co-creator of BigTest</p>
-    </div>
-    <div class="cta-block variation2 bottomside addtip">
-      <h3 class="cta-intro">Come hang out in our OSS community</h3>
-      <a href="https://discord.gg/r6AvtnU" target="_blank" rel="nofollow" class="button purple w-button">Join our Discord</a>
-    </div>
-  </section>
-  <section class="bottomwrapper notopspace w-container">
-    <div class="dialogcta emptytip"></div>
-  </section>
-  <section class="feature-wrapper notopspace w-container">
-    <div class="feature-text">
-      <a href="https://bigtestjs.io/" target="_blank" rel="nofollow" class="headinglink w-inline-block">
-        <h2 class="heading-3"><span class="text-span-45">BigTest</span> — truly cross-browser testing made easy</h2>
-      </a>
-      <p>BigTest’s novel architecture combines the sophistication of modern tooling, our decades-long experience writing tests, plus all the lessons learned from Capybara, Rail’s famous end-to-end testing framework. </p>
-      <a href="https://bigtestjs.io/" target="_blank" rel="nofollow" class="button topage w-button">Learn more</a>
-      <a href="https://bigtestjs.io/" target="_blank" rel="nofollow" class="button topage arrow w-button">→</a>
-    </div>
-    <div class="feature-image centered"><img src="images/testing-devices2x.png" loading="eager" width="505.5" sizes="400px" srcset="images/testing-devices2x-p-500.png 500w, images/testing-devices2x.png 1104w" alt="" class="bigtestside"></div>
-  </section>
-  <div class="tools-list-wrap">
-    <div class="valuebox tool">
-      <h3 class="valuetitle"><span class="text-span-46">Affection</span>: algebraic effects API</h3>
-      <p>Over the years we’ve iterated on the ergonomics that make algebraic effects easy to use within popular javascript frameworks. This library makes it possible for us to have sophisticated concurrent threads running on BigTest. </p>
-      <a href="https://github.com/thefrontside/effection" target="_blank" rel="nofollow" class="button topage small w-button">View on Github</a>
-    </div>
-    <div class="valuebox tool decor2">
-      <h3 class="valuetitle"><span class="text-span-47">Microstates</span>: composable primitives for Javascript</h3>
-      <p>Microstates introduces javascript structure primitives that resemble traditional, intuitive, mutable objects. But behind the scenes everything is a pure function handling immutable data, giving you the benefits of functional programming without the mental overhead. </p>
-      <a href="https://github.com/thefrontside/microstates" target="_blank" rel="nofollow" class="button topage small w-button">View on Github</a>
+  <div class="home-hero contact">
+    <div class="herotext cenetered">
+      <h1 class="heading centered">Get in touch with<br>one of our engineers</h1>
+      <p class="subheader centered">Frontside helps organizations synchronize their development efforts to effectively collaborate in addressing the needs of all stakeholders</p>
     </div>
   </div>
-  <div class="tools-list-wrap">
-    <div class="valuebox tool decor3">
-      <h3 class="valuetitle"><span class="text-span-48">@frontside/javascript</span>: code linters and standards</h3>
-      <p>Code quality necessarily comes from writing consistent code. We ensure logical and uniform coding by using common eslint rules and tsconfig setups that are available as open source packages. </p>
-      <a href="https://github.com/thefrontside/javascript" target="_blank" rel="nofollow" class="button topage small w-button">View on Github</a>
-    </div>
-    <div class="valuebox tool decor1">
-      <h3 class="valuetitle"><span class="text-span-49">Frontmacs</span>: a curated emacs distribution </h3>
-      <p>Optimized for web workflows, our emacs distribution delights the users of this popular text editor every time. We’ve built it so it can be extensible and customizable, and we also included our favorite plugins and settings for working with javascript. </p>
-      <a href="https://github.com/thefrontside/frontmacs" target="_blank" rel="nofollow" class="button topage small w-button">View on Github</a>
+  <div class="midwrapper">
+    <div data-netlify="true" data-netlify-honeypot="bot-field" class="form-block w-form">
+      <form id="wf-form-contact" name="wf-form-contact" data-name="contact" action="/contact/thanks/" method="post" class="form">
+        <input type="hidden" name="form-name" value="contact" />
+        <div hidden>
+          <label>
+            Don’t fill this out:
+            <input name="bot-field" />
+          </label>
+        </div>
+        <div class="form-row">
+          <div class="input-border-2"><input type="text" class="text-field w-input" maxlength="256" name="Name" data-name="Name" placeholder="Your name" id="Name-2" required=""></div>
+          <div class="input-border-2"><input type="email" class="text-field w-input" maxlength="256" name="Email" data-name="Email" placeholder="Your email " id="email" required=""></div>
+        </div>
+        <div class="form-row">
+          <div class="input-border-2"><textarea placeholder="Your message" maxlength="5000" id="message-2" name="message" data-name="message" class="text-field textarea w-input"></textarea></div>
+        </div><input type="submit" value="Send message" data-wait="Please wait..." class="button submit w-button">
+      </form>
+      <div class="success-message-2 w-form-done">
+        <div class="thanks-paragraph"><span class="thanks-bold-2">Thanks!</span>We&#x27;ll get back to you as soon as possible ✨</div>
+      </div>
+      <div class="w-form-fail">
+        <div>Oops! Something went wrong while submitting the form.</div>
+      </div>
     </div>
   </div>
   <footer class="footerwrapper w-container">
@@ -140,9 +115,9 @@
       <a href="/" class="footerlink">Home</a>
       <a href="/about" class="footerlink">About</a>
       <a href="/consulting" class="footerlink">Consulting</a>
-      <a href="/tools" aria-current="page" class="footerlink w--current">Tools</a>
+      <a href="/tools" class="footerlink">Tools</a>
       <a href="/blog" class="footerlink">Insights</a>
-      <a href="/contact" class="footerlink">Contact</a>
+      <a href="/contact" aria-current="page" class="footerlink w--current">Contact</a>
     </nav>
     <a href="/" class="footer-symbol w-inline-block"><img src="images/fs-webclip.png" loading="lazy" width="32.5" alt="" class="image-6"></a>
     <p class="footer-notes"><br>2301 W Anderson Ln #107<br>Austin, Texas 78757<br>+1 (800) 493-4589</p>
