--- a/static/index.html
+++ b/static/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Fri Nov 13 2020 10:54:44 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Mon Nov 16 2020 11:14:38 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f7f19d60c33effa4a9a8bf9" data-wf-site="5f7f19d60c33ef0c409a8bf8">
 <head>
   <meta charset="utf-8">
@@ -67,11 +67,11 @@
             <a href="/blog" class="main-nav-link w-nav-link">Insights</a>
           </li>
           <li class="navitem contactin">
-            <a href="#" class="button cta nav in w-button">Contact</a>
+            <a href="/contact" class="button cta nav in w-button">Contact</a>
           </li>
         </ul>
       </nav>
-      <a href="#" class="button cta nav w-button">Contact</a>
+      <a href="/contact" class="button cta nav w-button">Contact</a>
       <div class="menu-button-2 w-nav-button">
         <div class="image-4 w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="33" height="17.5" viewbox="0 0 32.63 17" classname="image-4">
             <path fill="#14315d" d="M7.4,0,0,4.27v8.46L7.4,17l7.34-4.27V4.27ZM7.34,2.82l5,2.89v5.64L7.4,14.18,2.45,11.35V5.71L4.2,4.64"></path>
@@ -87,7 +87,7 @@
         <p class="subheader centered">Frontside helps organizations synchronize their development efforts to effectively collaborate in addressing the needs of all stakeholders</p>
       </div>
     </section>
-    <section class="horizontal-logos narrow w-container"><img src="images/client-dell2x.png" loading="lazy" width="74.5" alt="" class="client-logo"><img src="images/client-honeywell2x.png" loading="lazy" width="138" alt="" class="client-logo"><img src="images/client-resideo2x.png" loading="lazy" width="91.5" alt="" class="client-logo"><img src="images/client-standard-chartered2x.png" loading="lazy" width="74" alt="" class="client-logo"><img src="images/client-ebsco2x.png" loading="lazy" width="87" alt="" class="client-logo"><img src="images/client-sxsw2x.png" loading="lazy" width="89" alt="" class="client-logo"><img src="images/client-conde-nast2x.png" loading="lazy" width="209" alt="" class="client-logo"></section>
+    <section class="horizontal-logos narrow w-container"><img src="images/client-dell2x.png" loading="lazy" width="74.5" alt="" class="client-logo home"><img src="images/client-honeywell2x.png" loading="lazy" width="138" alt="" class="client-logo home"><img src="images/client-resideo2x.png" loading="lazy" width="91.5" alt="" class="client-logo home"><img src="images/client-standard-chartered2x.png" loading="lazy" width="74" alt="" class="client-logo home"><img src="images/client-ebsco2x.png" loading="lazy" width="87" alt="" class="client-logo home"><img src="images/client-sxsw2x.png" loading="lazy" width="89" alt="" class="client-logo home"><img src="images/client-conde-nast2x.png" loading="lazy" width="209" alt="" class="client-logo home"></section>
   </div>
   <div class="midwrapper wedontapps w-container">
     <h2 class="homebanner">We don&#x27;t<br>build apps</h2>
@@ -111,7 +111,7 @@
     <div class="bigquote-wrapper w-container">
       <blockquote class="bigquote">“Frontside has an unwavering commitment to developer experience and quality. <span class="text-span-37">They make sure everything we do is repeatable and scalable.</span>”</blockquote>
       <p class="bigquote-author">— Brian Beale, Director of Software Engineering at Resideo</p>
-      <a href="#" class="button primary w-button"><span>Talk with us</span></a>
+      <a href="/contact" class="button primary w-button"><span>Talk with us</span></a>
     </div>
   </div>
   <section class="feature-wrapper w-container">
@@ -160,9 +160,9 @@
       <a href="/consulting" class="footerlink">Consulting</a>
       <a href="/tools" class="footerlink">Tools</a>
       <a href="/blog" class="footerlink">Insights</a>
-      <a href="#" class="footerlink">Contact</a>
+      <a href="/contact" class="footerlink">Contact</a>
     </nav>
-    <a href="https://frontside.com/" target="_blank" rel="nofollow" class="footer-symbol w-inline-block"><img src="images/fs-webclip.png" loading="lazy" width="32.5" alt="" class="image-6"></a>
+    <a href="/" aria-current="page" class="footer-symbol w-inline-block w--current"><img src="images/fs-webclip.png" loading="lazy" width="32.5" alt="" class="image-6"></a>
     <p class="footer-notes"><br>2301 W Anderson Ln #107<br>Austin, Texas 78757<br>+1 (800) 493-4589</p>
     <p class="copyright">© 2005-2020 THE FRONTSIDE SOFTWARE, INC. ALL RIGHTS RESERVED.</p>
   </footer>
