--- a/static/contact.html
+++ b/static/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Mon Nov 16 2020 11:14:38 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Mon Nov 16 2020 11:58:24 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5faea4534d61150d591f8411" data-wf-site="5f7f19d60c33ef0c409a8bf8">
 <head>
   <meta charset="utf-8">
@@ -22,6 +22,18 @@
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
+  <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-44597640-1"></script>
+  <script type="text/javascript">window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('js', new Date());gtag('config', 'UA-44597640-1', {'anonymize_ip': false});</script><!--  Hotjar Tracking Code for https://frontside.com/  -->
+  <script>
+    (function(h,o,t,j,a,r){
+        h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+        h._hjSettings={hjid:859026,hjsv:6};
+        a=o.getElementsByTagName('head')[0];
+        r=o.createElement('script');r.async=1;
+        r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+        a.appendChild(r);
+    })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+</script>
 </head>
 <body class="fs-body">
   <div data-collapse="medium" data-animation="over-right" data-duration="200" data-doc-height="1" data-easing="ease-in-out-circ" data-no-scroll="1" role="banner" class="navbar w-nav">
@@ -86,17 +98,17 @@
   </div>
   <div class="midwrapper">
     <div data-netlify="true" data-netlify-honeypot="bot-field" class="form-block w-form">
-      <form id="wf-form-contact" name="wf-form-contact" data-name="contact" action="/contact/thanks/" method="post" class="form">
+      <form id="wf-form-contact" name="wf-form-contact" data-name="contact" action="/contact-thanks/" method="post" class="form">
         <input type="hidden" name="form-name" value="contact" />
         <div hidden>
           <label>
             Don’t fill this out:
-            <input name="bot-field" />
+            <input name="bot-field" onChange={this.handleChange} />
           </label>
         </div>
         <div class="form-row">
-          <div class="input-border-2"><input type="text" class="text-field w-input" maxlength="256" name="Name" data-name="Name" placeholder="Your name" id="Name-2" required=""></div>
-          <div class="input-border-2"><input type="email" class="text-field w-input" maxlength="256" name="Email" data-name="Email" placeholder="Your email " id="email" required=""></div>
+          <div class="input-border-2"><input type="text" class="text-field w-input" maxlength="256" name="name" data-name="name" placeholder="Your name" id="name" required=""></div>
+          <div class="input-border-2"><input type="email" class="text-field w-input" maxlength="256" name="email" data-name="email" placeholder="Your email " id="email" required=""></div>
         </div>
         <div class="form-row">
           <div class="input-border-2"><textarea placeholder="Your message" maxlength="5000" id="message-2" name="message" data-name="message" class="text-field textarea w-input"></textarea></div>
