Updates static pages content

--- a/static/about.html
+++ b/static/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Mon Nov 16 2020 11:58:24 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Mon Nov 16 2020 19:46:23 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f8432592616248537dab3da" data-wf-site="5f7f19d60c33ef0c409a8bf8">
 <head>
   <meta charset="utf-8">
@@ -94,7 +94,7 @@
   </div>
   <section class="widewrapper herowrapper w-container">
     <div class="herotext">
-      <h1 class="heading">We’ve been <span class="text-span-12">improving</span> engineering organizations <span class="text-span-11">since 2005</span></h1>
+      <h1 class="heading">We’ve been <span class="text-span-12">improving</span> engineering orgs <span class="text-span-11">since 2005</span></h1>
       <p class="subheader">We are a purposefully small group of engineers who want to create scale-ready tools</p>
     </div>
     <div class="aboutheroimage"><img src="images/about-hero1.5x.png" loading="eager" sizes="(max-width: 479px) 92vw, (max-width: 767px) 93vw, (max-width: 991px) 534.5px, 44vw" width="534.5" alt="" srcset="images/about-hero1.5x-p-500.png 500w, images/about-hero1.5x.png 1069w"></div>
@@ -140,7 +140,7 @@
         <div class="person-intro-meta">Austin, Texas</div>
         <p>More than 25 years ago, Charles torched a promising career in biochemistry and joined the dot-com revolution. Ever since he&#x27;s laid down the architecture of dozens of corporate web and mobile applications. He continues the revolution through active research and development on automated testing and real-life use of algebraic effects and concurrency.</p>
       </div>
-      <div class="person-picture"><img src="images/charles1.5x-100.jpg" loading="lazy" width="371" sizes="(max-width: 479px) 100vw, (max-width: 767px) 371px, (max-width: 991px) 300px, 350px" srcset="images/charles1.5x-100-p-500.jpeg 500w, images/charles1.5x-100.jpg 557w" alt="Portrait of Charles Lowell. He has a salt and pepper beard beard and a hat. " class="person-image"></div>
+      <div class="person-picture"><img src="images/charles1.5x-100.jpg" loading="lazy" width="371" sizes="(max-width: 479px) 77vw, (max-width: 767px) 371px, (max-width: 991px) 300px, 350px" srcset="images/charles1.5x-100-p-500.jpeg 500w, images/charles1.5x-100.jpg 557w" alt="Portrait of Charles Lowell. He has a salt and pepper beard beard and a hat. " class="person-image"></div>
     </div>
     <div class="person-intro">
       <div class="person-info">
@@ -149,7 +149,7 @@
         <div class="person-intro-meta">Toronto, Canada</div>
         <p>Taras began his journey into the realm of digital technology when in early 2000s his first clients started asking him to build websites. He quickly realized that rather than go it alone how much more satisfying it was to bring together cross disciplinary teams to work collaboratively towards common goals. At Frontside, Taras creates and nourishes relationships among his team, clients and partners to achieve ambitious long-term objectives</p>
       </div>
-      <div class="person-picture"><img src="images/taras1.5x-100.jpg" loading="lazy" width="500" sizes="(max-width: 479px) 100vw, (max-width: 767px) 88vw, (max-width: 991px) 300px, 350px" srcset="images/taras1.5x-100-p-500.jpeg 500w, images/taras1.5x-100.jpg 557w" alt="Portrait of Taras. He has long straight hair. He has no beard in this picture but usually fashions a short stubble. " class="person-image"></div>
+      <div class="person-picture"><img src="images/taras1.5x-100.jpg" loading="lazy" width="500" sizes="(max-width: 479px) 86vw, (max-width: 767px) 88vw, (max-width: 991px) 300px, 350px" srcset="images/taras1.5x-100-p-500.jpeg 500w, images/taras1.5x-100.jpg 557w" alt="Portrait of Taras. He has long straight hair. He has no beard in this picture but usually fashions a short stubble. " class="person-image"></div>
     </div>
     <div class="person-intro">
       <div class="person-info">
@@ -158,7 +158,7 @@
         <div class="person-intro-meta">Austin, Texas</div>
         <p>After succeeding in the trenches of the startup world—leading frontend teams through hyper-growth and a decade consulting for global corporations—Jeffrey now calls himself a &quot;software diplomat.&quot; With a masters in Software Engineering from The University of Texas at Austin, he facilitates technical conversations and rolls up his sleeves to make change happen. </p>
       </div>
-      <div class="person-picture"><img src="images/jeffrey1.5x-100.jpg" loading="lazy" width="371" sizes="(max-width: 479px) 100vw, (max-width: 767px) 371px, (max-width: 991px) 300px, 350px" srcset="images/jeffrey1.5x-100-p-500.jpeg 500w, images/jeffrey1.5x-100.jpg 557w" alt="Portrait of Jeffrey. He has a short haircut and no beard." class="person-image"></div>
+      <div class="person-picture"><img src="images/jeffrey1.5x-100.jpg" loading="lazy" width="371" sizes="(max-width: 479px) 77vw, (max-width: 767px) 371px, (max-width: 991px) 300px, 350px" srcset="images/jeffrey1.5x-100-p-500.jpeg 500w, images/jeffrey1.5x-100.jpg 557w" alt="Portrait of Jeffrey. He has a short haircut and no beard." class="person-image"></div>
     </div>
     <div class="person-intro">
       <div class="person-info">
@@ -167,7 +167,7 @@
         <div class="person-intro-meta">Boston, Massachusetts</div>
         <p>For over a decade, Elrick has been leading product teams as a creative engineer. Drawing from his background in print design and marketing, he brings together impeccable user experiences that deliver business value. </p>
       </div>
-      <div class="person-picture"><img src="images/elrick1.5x-100.jpg" loading="lazy" width="500" sizes="(max-width: 479px) 100vw, (max-width: 767px) 88vw, (max-width: 991px) 300px, 350px" srcset="images/elrick1.5x-100-p-500.jpeg 500w, images/elrick1.5x-100.jpg 557w" alt="Portrait of Elrick. He has short hair and a short beard. " class="person-image"></div>
+      <div class="person-picture"><img src="images/elrick1.5x-100.jpg" loading="lazy" width="500" sizes="(max-width: 479px) 86vw, (max-width: 767px) 88vw, (max-width: 991px) 300px, 350px" srcset="images/elrick1.5x-100-p-500.jpeg 500w, images/elrick1.5x-100.jpg 557w" alt="Portrait of Elrick. He has short hair and a short beard. " class="person-image"></div>
     </div>
     <div class="person-intro">
       <div class="person-info">
@@ -176,7 +176,7 @@
         <div class="person-intro-meta">Richmond, Virginia</div>
         <p>Driven by a strong passion for technical excellence, Robbie has helped teams with their development tools and testing practices since 2012. With a scrum certification under his belt, Robbie knows how to coordinate developers to deliver quality software on time. </p>
       </div>
-      <div class="person-picture"><img src="images/robbie1.5x-100.jpg" loading="lazy" width="500" sizes="(max-width: 479px) 100vw, (max-width: 767px) 88vw, (max-width: 991px) 300px, 350px" srcset="images/robbie1.5x-100-p-500.jpeg 500w, images/robbie1.5x-100.jpg 557w" alt="Portrait of Robbie. He&#x27;s wearing glasses and medium-short hair combed to the left." class="person-image"></div>
+      <div class="person-picture"><img src="images/robbie1.5x-100.jpg" loading="lazy" width="500" sizes="(max-width: 479px) 86vw, (max-width: 767px) 88vw, (max-width: 991px) 300px, 350px" srcset="images/robbie1.5x-100-p-500.jpeg 500w, images/robbie1.5x-100.jpg 557w" alt="Portrait of Robbie. He&#x27;s wearing glasses and medium-short hair combed to the left." class="person-image"></div>
     </div>
     <div class="person-intro">
       <div class="person-info">
@@ -185,7 +185,7 @@
         <div class="person-intro-meta">Halifax, Canada</div>
         <p>After the startup he worked at got acquired, Jordan spent five years as a consultant, developing smart process that automate key business and research activities for his clients. At Frontside, he puts his Computer Engineering degree from the University of Toronto to work to the same ends, creating tools to automate development processes.</p>
       </div>
-      <div class="person-picture"><img src="images/robbie1.5x-100.jpg" loading="lazy" width="500" sizes="(max-width: 479px) 100vw, (max-width: 767px) 88vw, (max-width: 991px) 300px, 350px" srcset="images/robbie1.5x-100-p-500.jpeg 500w, images/robbie1.5x-100.jpg 557w" alt="Portrait of Robbie. He&#x27;s wearing glasses and medium-short hair combed to the left." class="person-image"></div>
+      <div class="person-picture"><img src="images/jordan.jpg" loading="lazy" width="500" alt="Portrait of Jordan. He&#x27;s wearing a mullet. " class="person-image"></div>
     </div>
     <div class="person-intro">
       <div class="person-info">
@@ -194,7 +194,7 @@
         <div class="person-intro-meta">Toronto, Canada</div>
         <p>After the startup he worked at got acquired, Jordan spent five years as a consultant, developing smart process that automate key business and research activities for his clients. At Frontside, he puts his Computer Engineering degree from the University of Toronto to work to the same ends, creating tools to automate development processes.</p>
       </div>
-      <div class="person-picture"><img src="images/min1.5x-100.jpg" loading="lazy" width="500" sizes="(max-width: 479px) 100vw, (max-width: 767px) 88vw, (max-width: 991px) 300px, 350px" srcset="images/min1.5x-100-p-500.jpeg 500w, images/min1.5x-100.jpg 557w" alt="Portrait of Min. He&#x27;s wearing round glasses and has medium-long hair. He&#x27;s holding a cello." class="person-image"></div>
+      <div class="person-picture"><img src="images/min1.5x-100.jpg" loading="lazy" width="500" sizes="(max-width: 479px) 86vw, (max-width: 767px) 88vw, (max-width: 991px) 300px, 350px" srcset="images/min1.5x-100-p-500.jpeg 500w, images/min1.5x-100.jpg 557w" alt="Portrait of Min. He&#x27;s wearing round glasses and has medium-long hair. He&#x27;s holding a cello." class="person-image"></div>
     </div>
     <div class="person-intro">
       <div class="person-info">
@@ -203,7 +203,7 @@
         <div class="person-intro-meta">Barcelona, Spain</div>
         <p>After working in software engineering for five years, Jorge pursued his interests with a masters in digital communication at UCLA and AAU. Now Jorge channels the tech enthusiasm at Frontside into messages for everyone. </p>
       </div>
-      <div class="person-picture"><img src="images/jorge1.5x-100.jpg" loading="lazy" width="500" sizes="(max-width: 479px) 100vw, (max-width: 767px) 88vw, (max-width: 991px) 300px, 350px" srcset="images/jorge1.5x-100-p-500.jpeg 500w, images/jorge1.5x-100.jpg 557w" alt="Portrait of Jorge. He has short hair a short stubble. " class="person-image"></div>
+      <div class="person-picture"><img src="images/jorge1.5x-100.jpg" loading="lazy" width="500" sizes="(max-width: 479px) 86vw, (max-width: 767px) 88vw, (max-width: 991px) 300px, 350px" srcset="images/jorge1.5x-100-p-500.jpeg 500w, images/jorge1.5x-100.jpg 557w" alt="Portrait of Jorge. He has short hair a short stubble. " class="person-image"></div>
     </div>
   </div>
   <footer class="footerwrapper w-container">
