Updates Min's bio

--- a/static/about.html
+++ b/static/about.html
@@ -191,7 +191,7 @@
         <h3 class="person-intro-title">Min Kim</h3>
         <div class="person-title"><strong>Associate Engineering Consultant</strong></div>
         <div class="person-intro-meta">Toronto, Canada</div>
-        <p>After the startup he worked at got acquired, Jordan spent five years as a consultant, developing smart process that automate key business and research activities for his clients. At Frontside, he puts his Computer Engineering degree from the University of Toronto to work to the same ends, creating tools to automate development processes.</p>
+        <p>Min's career as a professional cellist took a turn when a friend introduced him to programming a few years ago. He now specializes in creating developer tools and CI/CD pipelines, as well as researching new technologies as they emerge.</p>
       </div>
       <div class="person-picture"><img src="images/min1.5x-100.jpg" loading="lazy" width="500" sizes="(max-width: 479px) 86vw, (max-width: 767px) 88vw, (max-width: 991px) 300px, 350px" srcset="images/min1.5x-100-p-500.jpeg 500w, images/min1.5x-100.jpg 557w" alt="Portrait of Min. He&#x27;s wearing round glasses and has medium-long hair. He&#x27;s holding a cello." class="person-image"></div>
     </div>
