Fixes styles on mobile contact page

--- a/static/about.html
+++ b/static/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Mon Nov 16 2020 19:46:23 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Tue Nov 17 2020 18:22:00 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f8432592616248537dab3da" data-wf-site="5f7f19d60c33ef0c409a8bf8">
 <head>
   <meta charset="utf-8">
@@ -191,7 +191,7 @@
         <h3 class="person-intro-title">Min Kim</h3>
         <div class="person-title"><strong>Associate Engineering Consultant</strong></div>
         <div class="person-intro-meta">Toronto, Canada</div>
-        <p>Min's career as a professional cellist took a turn when a friend introduced him to programming a few years ago. He now specializes in creating developer tools and CI/CD pipelines, as well as researching new technologies as they emerge.</p>
+        <p>Min&#x27;s career as a professional cellist took a turn when a friend introduced him to programming a few years ago. He now specializes in creating developer tools and CI/CD pipelines, as well as researching new technologies as they emerge.</p>
       </div>
       <div class="person-picture"><img src="images/min1.5x-100.jpg" loading="lazy" width="500" sizes="(max-width: 479px) 86vw, (max-width: 767px) 88vw, (max-width: 991px) 300px, 350px" srcset="images/min1.5x-100-p-500.jpeg 500w, images/min1.5x-100.jpg 557w" alt="Portrait of Min. He&#x27;s wearing round glasses and has medium-long hair. He&#x27;s holding a cello." class="person-image"></div>
     </div>
