--- a/static/contact.html
+++ b/static/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Mon Nov 16 2020 19:46:23 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Tue Nov 17 2020 18:22:00 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5faea4534d61150d591f8411" data-wf-site="5f7f19d60c33ef0c409a8bf8">
 <head>
   <meta charset="utf-8">
@@ -92,7 +92,7 @@
   <div class="home-hero contact">
     <div class="herotext cenetered">
       <h1 class="heading centered">Get in touch with<br>one of our engineers</h1>
-      <p class="subheader centered">Tell us about your situation and objectives<br>to get the conversation started</p>
+      <p class="subheader centered narrow">Tell us about your situation and objectives to get the conversation started</p>
     </div>
   </div>
   <div class="midwrapper">
