Updates Charles' bio

--- a/static/about.html
+++ b/static/about.html
@@ -137,7 +137,7 @@
         <h3 class="person-intro-title">Charles Lowell</h3>
         <div class="person-title">CTO / Head of Research &amp; Development</div>
         <div class="person-intro-meta">Austin, Texas</div>
-        <p>More than 25 years ago, Charles torched a promising career in biochemistry and joined the dot-com revolution. Ever since he&#x27;s laid down the architecture of dozens of corporate web and mobile applications. He continues the revolution through active research and development on automated testing and real-life use of algebraic effects and concurrency.</p>
+        <p>More than 25 years ago, Charles torched a promising career in biochemistry and joined the dot-com revolution. After coding daily on systems big and small, he founded Frontside in 2005 based on the belief that good software development patterns are universal. Charles currently researches testing platforms and structured concurrency to power up every developer’s daily coding life.</p>
       </div>
       <div class="person-picture"><img src="images/charles1.5x-100.jpg" loading="lazy" width="371" sizes="(max-width: 479px) 77vw, (max-width: 767px) 371px, (max-width: 991px) 300px, 350px" srcset="images/charles1.5x-100-p-500.jpeg 500w, images/charles1.5x-100.jpg 557w" alt="Portrait of Charles Lowell. He has a salt and pepper beard beard and a hat. " class="person-image"></div>
     </div>
