Adds Rachelle to about page

--- a/static/about.html
+++ b/static/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Tue Nov 17 2020 18:22:00 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Tue Nov 24 2020 10:34:46 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f8432592616248537dab3da" data-wf-site="5f7f19d60c33ef0c409a8bf8">
 <head>
   <meta charset="utf-8">
@@ -149,6 +149,15 @@
         <p>Taras began his journey into the realm of digital technology when in early 2000s his first clients started asking him to build websites. He quickly realized that rather than go it alone how much more satisfying it was to bring together cross disciplinary teams to work collaboratively towards common goals. At Frontside, Taras creates and nourishes relationships among his team, clients and partners to achieve ambitious long-term objectives</p>
       </div>
       <div class="person-picture"><img src="images/taras1.5x-100.jpg" loading="lazy" width="500" sizes="(max-width: 479px) 86vw, (max-width: 767px) 88vw, (max-width: 991px) 300px, 350px" srcset="images/taras1.5x-100-p-500.jpeg 500w, images/taras1.5x-100.jpg 557w" alt="Portrait of Taras. He has long straight hair. He has no beard in this picture but usually fashions a short stubble. " class="person-image"></div>
+    </div>
+    <div class="person-intro">
+      <div class="person-info">
+        <h3 class="person-intro-title">Rachelle Stewart</h3>
+        <div class="person-title">Business Administrator</div>
+        <div class="person-intro-meta">Richmond, Virginia</div>
+        <p>After leaving the U.S. Airforce, Rachelle began her decade-long career in business administration. She has successfully managed two businesses of her own and earned an MBA from Capella University.  She now orchestrates financial and legal affairs at Frontside and is at the core of its strategic planning.</p>
+      </div>
+      <div class="person-picture"><img src="images/rachelle.jpg" loading="lazy" width="500" alt="Portrait of Rachelle. She&#x27;s wearing a hat and has curly hair." class="person-image"></div>
     </div>
     <div class="person-intro">
       <div class="person-info">
