Adds Jacob to the about page

--- a/static/about.html
+++ b/static/about.html
@@ -206,6 +206,15 @@
     </div>
     <div class="person-intro">
       <div class="person-info">
+        <h3 class="person-intro-title">Jacob Bolda</h3>
+        <div class="person-title"><strong>Engineering Consultant</strong></div>
+        <div class="person-intro-meta">Milwaukee, Wisconsin</div>
+        <p>After designing skylights and touring the US and Europe through structural engineering, Jacob started transitioning to software engineering over the past decade. At Frontside, he combines the rigor he used to make buildings stand up with in-depth technical knowledge to ensure your development tools and apps will run smoothly.</p>
+      </div>
+      <div class="person-picture"><img src="images/jacob.jpg" loading="lazy" width="500" alt="" class="person-image"></div>
+    </div>
+    <div class="person-intro">
+      <div class="person-info">
         <h3 class="person-intro-title">Jorge Lainfiesta</h3>
         <div class="person-title"><strong>Communications / Marketing</strong></div>
         <div class="person-intro-meta">Barcelona, Spain</div>
