Mix in a bit of podcast into the blog

--- a/static/tools.html
+++ b/static/tools.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Tue Nov 17 2020 18:22:00 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Mon Dec 21 2020 07:55:15 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f85bf7b1a80ea76947f56fd" data-wf-site="5f7f19d60c33ef0c409a8bf8">
 <head>
   <meta charset="utf-8">
@@ -75,7 +75,7 @@
             <a href="/tools" aria-current="page" class="main-nav-link w-nav-link w--current">Tools</a>
           </li>
           <li class="navitem">
-            <a href="/blog" class="main-nav-link w-nav-link">Insights</a>
+            <a href="/blog" class="main-nav-link w-nav-link">Blog</a>
           </li>
           <li class="navitem contactin">
             <a href="/contact" class="button cta nav in w-button">Contact</a>
@@ -124,7 +124,7 @@
   </section>
   <div class="tools-list-wrap">
     <div class="valuebox tool">
-      <h3 class="valuetitle"><span class="text-span-46">Effection</span>: algebraic effects API</h3>
+      <h3 class="valuetitle"><span class="text-span-46">Affection</span>: algebraic effects API</h3>
       <p>Over the years we’ve iterated on the ergonomics that make algebraic effects easy to use within popular javascript frameworks. This library makes it possible for us to have sophisticated concurrent threads running on BigTest. </p>
       <a href="https://github.com/thefrontside/effection" target="_blank" rel="nofollow" class="button topage small w-button">View on Github</a>
     </div>
@@ -152,7 +152,8 @@
       <a href="/about" class="footerlink">About</a>
       <a href="/consulting" class="footerlink">Consulting</a>
       <a href="/tools" aria-current="page" class="footerlink w--current">Tools</a>
-      <a href="/blog" class="footerlink">Insights</a>
+      <a href="/blog" class="footerlink">Blog</a>
+      <a href="/podcast" class="footerlink">Podcast</a>
       <a href="/contact" class="footerlink">Contact</a>
     </nav>
     <a href="/" class="footer-symbol w-inline-block"><img src="images/fs-webclip.png" loading="lazy" width="32.5" alt="" class="image-6"></a>
