--- a/static/about.html
+++ b/static/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Tue Nov 24 2020 10:34:46 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Mon Dec 21 2020 07:55:15 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f8432592616248537dab3da" data-wf-site="5f7f19d60c33ef0c409a8bf8">
 <head>
   <meta charset="utf-8">
@@ -75,7 +75,7 @@
             <a href="/tools" class="main-nav-link w-nav-link">Tools</a>
           </li>
           <li class="navitem">
-            <a href="/blog" class="main-nav-link w-nav-link">Insights</a>
+            <a href="/blog" class="main-nav-link w-nav-link">Blog</a>
           </li>
           <li class="navitem contactin">
             <a href="/contact" class="button cta nav in w-button">Contact</a>
@@ -209,7 +209,7 @@
         <h3 class="person-intro-title">Jacob Bolda</h3>
         <div class="person-title"><strong>Engineering Consultant</strong></div>
         <div class="person-intro-meta">Milwaukee, Wisconsin</div>
-        <p>After designing skylights and touring the US and Europe through structural engineering, Jacob started transitioning to software engineering over the past decade. At Frontside, he combines the rigor he used to make buildings stand up with in-depth technical knowledge to ensure your development tools and apps will run smoothly.</p>
+        <p>Min&#x27;s career as a professional cellist took a turn when a friend introduced him to programming a few years ago. He now specializes in creating developer tools and CI/CD pipelines, as well as researching new technologies as they emerge.</p>
       </div>
       <div class="person-picture"><img src="images/jacob.jpg" loading="lazy" width="500" alt="" class="person-image"></div>
     </div>
@@ -229,7 +229,8 @@
       <a href="/about" aria-current="page" class="footerlink w--current">About</a>
       <a href="/consulting" class="footerlink">Consulting</a>
       <a href="/tools" class="footerlink">Tools</a>
-      <a href="/blog" class="footerlink">Insights</a>
+      <a href="/blog" class="footerlink">Blog</a>
+      <a href="/podcast" class="footerlink">Podcast</a>
       <a href="/contact" class="footerlink">Contact</a>
     </nav>
     <a href="/" class="footer-symbol w-inline-block"><img src="images/fs-webclip.png" loading="lazy" width="32.5" alt="" class="image-6"></a>
