--- a/static/consulting.html
+++ b/static/consulting.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Tue Nov 17 2020 18:22:00 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Mon Dec 21 2020 07:55:15 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f85a0bba25bf148ce79acb4" data-wf-site="5f7f19d60c33ef0c409a8bf8">
 <head>
   <meta charset="utf-8">
@@ -75,7 +75,7 @@
             <a href="/tools" class="main-nav-link w-nav-link">Tools</a>
           </li>
           <li class="navitem">
-            <a href="/blog" class="main-nav-link w-nav-link">Insights</a>
+            <a href="/blog" class="main-nav-link w-nav-link">Blog</a>
           </li>
           <li class="navitem contactin">
             <a href="/contact" class="button cta nav in w-button">Contact</a>
@@ -158,7 +158,8 @@
       <a href="/about" class="footerlink">About</a>
       <a href="/consulting" aria-current="page" class="footerlink w--current">Consulting</a>
       <a href="/tools" class="footerlink">Tools</a>
-      <a href="/blog" class="footerlink">Insights</a>
+      <a href="/blog" class="footerlink">Blog</a>
+      <a href="/podcast" class="footerlink">Podcast</a>
       <a href="/contact" class="footerlink">Contact</a>
     </nav>
     <a href="/" class="footer-symbol w-inline-block"><img src="images/fs-webclip.png" loading="lazy" width="32.5" alt="" class="image-6"></a>
